# speedtest

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  package.json  speedtest-extract.yaml
.github/: deploy.yml
.github/workflow/: deploy.yml  freebsd-publish.yml  linux-packages.yml
.github/workflows/: cargo-publish.yml  deploy.yml  freebsd-publish.yml  homebrew-publish.yml  linux-packages.yml
homepage/: index.html  index.md
homepage/.vitepress/: config.mts
homepage/.vitepress/theme/: HomeLayout.vue  index.ts  style.css
homepage/js/: index.js
homepage/public/: 2026-04-04 19-11-33.mov
scripts/: install.sh
speedtest/: build.rs
speedtest/src/cli/: mod.rs
speedtest/src/helpers/: render.rs
speedtest/src/renderer/: chart.rs  mod.rs
speedtest/src/speedtest/: download.rs  upload.rs
src/: main.rs
src/helpers/: render.rs
src/json/: mod.rs
src/metrics/: mod.rs
src/network/: mod.rs
src/renderer/: chart.rs  mod.rs
src/server/: mod.rs
src/speedtest/: download.rs  mod.rs  ping.rs  upload.rs
