[package]
name = "speedtest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "speedtest"
path = "speedtest/src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "deflate", "brotli", "stream"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1"
thiserror = "1"
